Fixed search suggestions overflow hidden

--- a/src/app/splash/splash.component.css
+++ b/src/app/splash/splash.component.css
@@ -30,7 +30,6 @@
 .splash {          
     min-height: 400px; 
     border-bottom: 8px solid #730000;
-    overflow: hidden;
     position: relative;
 }
 
